# RoverSight

./: .gitignore  CMakeLists.txt  readme.md
demo/: .main.cpp.swp  main.cpp  projectfiles.h
demo/data/: webcam_intrinsic_boof.yaml  webcam_intrinsic_opencv.yaml
ext/: CMakeLists.txt
ext/miniyaml/: CMakeLists.txt
ext/stb/: CMakeLists.txt
include/roversight/: rovermath.h  roversight.h
src/: camera.cpp  image.cpp  roversight.cpp
